cmake_minimum_required(VERSION 3.20)
project(Data_structure)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_structure main.cpp Stack/stack.hpp 单链表/Linklist.md 单链表/Linklist.txt Stack/括号匹配问题/BracketsMatch.cpp Stack/括号匹配问题/BracketsMatch.h Stack/逆波兰表达式/ReversePolishNotationTest.cpp Stack/逆波兰表达式/ReversePolishNotationTest.h 队列/queue.hpp 排序/Bubblesort.hpp 排序/Choosesort.hpp 排序/Insertsort.hpp 排序/Xiersort.hpp)
